@@ -1,134 +1,128 @@
-<?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.eclipse.tigerstripe</groupId>
-	<artifactId>org.eclipse.tigerstripe.parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>o.e.t/pom.xml</name>
-	<properties>
-		<tycho-version>0.10.0</tycho-version>
-	</properties>
-	<modules>
-		<!-- features -->
-		<module>features/org.eclipse.tigerstripe.annotation.feature</module>
-		<module>features/org.eclipse.tigerstripe.base</module>
-		<module>features/org.eclipse.tigerstripe.workbench</module>
-		<!-- plugins -->
-		<module>plugins/org.eclipse.tigerstripe.espace.core</module>
-		<module>plugins/org.eclipse.tigerstripe.espace.resources</module>
-		<module>plugins/org.eclipse.tigerstripe.espace.resources.monitor</module>
-		<module>plugins/org.eclipse.tigerstripe.metamodel</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.base</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.ts2project.router</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.tsmodel</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.headless</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.help</module>
-		<module>plugins/org.eclipse.tigerstripe.repository.core</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.visualeditor.adaptation</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.base</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.dependencies</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.visualeditor</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.visualeditor.diagram</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.visualeditor.edit</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.branding</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.optional.bulkImport</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.optional.UML2Export</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.instancediagram</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.instancediagram.adaptation</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.instancediagram.diagram</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.instancediagram.edit</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.diagramrendering</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.UML2Import</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.ui.sdk</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.core</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.resource</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.validation</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.ui</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.resource.ui</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.tsmodel.ui</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.optional.buckminster</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.java.ui.refactoring</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.java.ui</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.java</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.ui.example.customView</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.resource.ui.refactoring</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.example.person.validators</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.example.person</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.example.router</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.example</module>
-		<module>plugins/org.eclipse.tigerstripe.releng</module>
-		<module>releng/org.eclipse.tigerstripe.update-site</module>
-
-		<!-- ui test plugins 
-		<module>releng/org.eclipse.tigerstripe.rcp</module>
-		<module>tests/org.eclipse.tigerstripe.ui.tests</module>
-		-->
-		
-		<!-- test plugins --> 
-		<module>plugins/org.eclipse.tigerstripe.test_common</module>
-		<module>plugins/org.eclipse.tigerstripe.metamodel.test</module>
-		<module>plugins/org.eclipse.tigerstripe.annotation.core.test</module>
-		<module>plugins/org.eclipse.tigerstripe.workbench.base.test</module>
-		<module>plugins/org.eclipse.tigerstripe.repository.core.test</module>
-		
-	</modules>
-	<repositories>
-		<repository>
-			<id>helios</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/helios/</url>
-		</repository>
-	</repositories>
-	<!-- Location of Q7 maven plugins 	-->
-	<pluginRepositories>
-		<pluginRepository>
-			<id>xored</id>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<name>Xored snapshots</name>
-			<url>http://maven.xored.com/nexus/content/repositories/snapshots/</url>
-		</pluginRepository>
-	</pluginRepositories>
-	<build>
-		<resources>
-			<resource>
-				<directory>${basedir}/src/java</directory>
-				<includes>
-					<include>**/*.vm</include>
-					<include>**/*.properties</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.sonatype.tycho</groupId>
-				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<extensions>true</extensions>
-			</plugin>
-			<plugin>
-				<groupId>org.sonatype.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho-version}</version>
-				<configuration>
-					<resolver>p2</resolver>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.sonatype.tycho</groupId>
-				<artifactId>maven-osgi-compiler-plugin</artifactId>
-				<version>${tycho-version}</version>
-			</plugin>
-			<plugin>
-				<groupId>org.sonatype.tycho</groupId>
-				<artifactId>maven-osgi-packaging-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<configuration>
-					<strictVersions>false</strictVersions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+	
+  <groupId>org.eclipse.tigerstripe</groupId>
+  <artifactId>org.eclipse.tigerstripe.parent</artifactId>
+  <version>0.7.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <name>o.e.t/pom.xml</name>
+	
+  <properties>
+	<tycho-version>0.10.0</tycho-version>
+	<!-- Default OSGi values. Might be overridden by a profile. -->
+	<osgi.arch>x86</osgi.arch>
+	<osgi.os>linux</osgi.os>
+	<osgi.ws>gtk</osgi.ws>
+	<junit.args>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</junit.args>
+	<!-- Change this to point to your local q7 executable. 
+		 Linux: path/to/q7/eclipse 
+		 Windows: C:\path\to\q7\eclipse.exe
+		 Mac: Q7 is not yet supported for Macs 
+		 Default location for build server: /auto/xmpsdk/q7_32/eclipse
+		 The 64-bit profile below overrides this location, 
+		 so if on a 64 bit machine change the definition in the profile below.-->
+		<q7.location>/auto/xmpsdk/q7_32/eclipse</q7.location>
+  </properties>
+	
+  <modules>
+	<module>features</module>
+	<module>plugins</module>
+	<module>releng</module>
+	<module>tests</module>
+  </modules>
+	
+  <repositories>
+	<repository>
+	  <id>helios</id>
+	  <layout>p2</layout>
+	  <url>http://download.eclipse.org/releases/helios/</url>
+	</repository>
+  </repositories>
+	
+  <build>
+	<resources>
+	  <resource>
+		<directory>${basedir}/src/java</directory>
+		<includes>
+		  <include>**/*.vm</include>
+		  <include>**/*.properties</include>
+		</includes>
+	  </resource>
+	</resources>
+	<plugins>
+	  <plugin>
+		<groupId>org.sonatype.tycho</groupId>
+		<artifactId>tycho-maven-plugin</artifactId>
+		<version>${tycho-version}</version>
+		<extensions>true</extensions>
+	  </plugin>
+	  <plugin>
+		<groupId>org.sonatype.tycho</groupId>
+		<artifactId>target-platform-configuration</artifactId>
+		<version>${tycho-version}</version>
+		<configuration>
+		  <resolver>p2</resolver>
+		</configuration>
+	  </plugin>
+	  <plugin>
+		<groupId>org.sonatype.tycho</groupId>
+		<artifactId>maven-osgi-compiler-plugin</artifactId>
+		<version>${tycho-version}</version>
+	  </plugin>
+	  <plugin>
+		<groupId>org.sonatype.tycho</groupId>
+		<artifactId>maven-osgi-packaging-plugin</artifactId>
+		<version>${tycho-version}</version>
+		<configuration>
+		  <strictVersions>false</strictVersions>
+		</configuration>
+	  </plugin>
+	</plugins>
+  </build>
+  
+  <profiles>
+	<profile>
+	  <id>64-bit</id>
+	  <activation>
+	    <property>
+	      <name>sun.arch.data.model</name>
+	      <value>64</value>
+	    </property>
+	  </activation>
+      <properties>
+		<q7.location>/auto/xmpsdk/q7/eclipse</q7.location>
+        <osgi.arch>x86_64</osgi.arch>
+      </properties>
+	</profile>
+    
+    <profile>
+	  <id>Windows</id>
+	  <activation>
+	   	<os>
+	      <family>windows</family>
+	   	</os>
+	  </activation>
+	  <properties>
+		<osgi.os>win32</osgi.os>
+		<osgi.ws>win32</osgi.ws>
+	  </properties>
+	</profile>
+	
+	<profile>
+	  <id>MacOS</id>
+	  <activation>
+	    <os>
+		  <family>mac</family>
+		</os>
+	  </activation>
+	  <properties>
+	    <osgi.os>macosx</osgi.os>
+		<osgi.ws>cocoa</osgi.ws>
+		<junit.args>-XstartOnFirstThread -Xms256m -Xmx1024m -XX:MaxPermSize=512m</junit.args>
+	  </properties>
+	</profile>
+  </profiles>
+  
 </project>
